--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,9 @@
                         <plugin>
                             <groupId>com.h3xstream.findsecbugs</groupId>
                             <artifactId>findsecbugs-plugin</artifactId>
-                            <version>LATEST</version> <!-- Auto-update to the latest stable -->
+                            <!-- <version>LATEST</version>  -->
+                            <!-- Auto-update to the latest stable -->
+                            <version>1.2.0</version>
                         </plugin>
                     </plugins>
                 </configuration>
@@ -285,7 +287,9 @@
                         <plugin>
                             <groupId>com.h3xstream.findsecbugs</groupId>
                             <artifactId>findsecbugs-plugin</artifactId>
-                            <version>LATEST</version> <!-- Auto-update to the latest stable -->
+                            <!-- <version>LATEST</version>  -->
+                            <!-- Auto-update to the latest stable -->
+                            <version>1.12.0</version>
                         </plugin>
                     </plugins>
                 </configuration>
