--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <!-- <version>2.3.4.RELEASE</version> -->
-        <!-- <version>3.1.1</version> -->
-        <version>2.7.13</version>
+        <version>3.1.1</version>
+        <!-- <version>2.7.13</version> -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>nl.amis.smeetsm</groupId>
@@ -44,15 +44,18 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
+        <!--fa 
+            <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>net.sourceforge.pmd</groupId>
             <artifactId>pmd-java</artifactId>
-            <version>6.31.0</version>
+            <!-- fa
+            <version>6.31.0</version> -->
+            <version>6.55.0</version>
         </dependency>
     </dependencies>
 
@@ -65,13 +68,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <!-- fa
+                <version>2.22.2</version> -->
+                <version>3.1.2</version>
             </plugin>
             <!-- checks dependencies for vulnerabilities -->
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>6.1.1</version>
+                <!-- fa
+                <version>6.1.1</version> -->
+                <version>8.3.1</version>
+
                 <executions>
                     <execution>
                         <goals>
@@ -92,7 +100,9 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.6</version>
+                <!-- fa
+                    <version>0.8.6</version> -->
+                <version>0.8.10</version>
                 <executions>
                     <execution>
                         <goals>
@@ -142,7 +152,9 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.2.0</version>
+                <!-- fa
+                <version>4.2.0</version> -->
+                <version>4.7.3.5</version>
                 <configuration>
                     <effort>Max</effort>
                     <threshold>Low</threshold>
@@ -155,7 +167,9 @@
                             <artifactId>findsecbugs-plugin</artifactId>
                             <!-- <version>LATEST</version>  -->
                             <!-- Auto-update to the latest stable -->
-                            <version>1.2.0</version>
+                            <!-- fa
+                            <version>1.2.0</version> -->
+                            <version>1.12.0</version>
                         </plugin>
                     </plugins>
                 </configuration>
@@ -171,7 +185,9 @@
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.2.1</version>
+                        <!-- fa
+                         <version>4.2.1</version> -->
+                         <version>4.7.3</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -179,7 +195,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.14.0</version>
+                <!-- fa
+                <version>3.14.0</version> -->
+                <version>3.21.0</version>
                 <configuration>
                     <failOnViolation>true</failOnViolation>
                     <failurePriority>1</failurePriority>
@@ -200,13 +218,17 @@
                     <!-- If ZAP is running on localhost, there is no need to define zapHost -->
                     <zapHost>zap</zapHost>
                     <zapPort>8080</zapPort>
-                    <targetUrl>http://myapp:8080/rest</targetUrl>
+                    <targetUrl>http://127.0.0.1:8082/rest</targetUrl>
+                    <!-- <targetUrl>http://myapp:8080/rest</targetUrl> -->
+                    <!-- http://localhost:8082/ -->
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.9.1</version>
+                <!-- fa hasta aqui 
+                <version>3.9.1</version> -->
+                <version>4.0.0-M8</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
