--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <!-- <version>2.3.4.RELEASE</version> -->
-        <version>3.1.1</version>
+        <!-- <version>3.1.1</version> -->
+        <version>3.0.0</version>
         <!-- <version>2.7.13</version> -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
