--- a/pom.xml
+++ b/pom.xml
@@ -199,9 +199,9 @@
                 <configuration>
                     <!-- If ZAP is running on localhost, there is no need to define zapHost -->
                     <zapHost>zap</zapHost>
-                    <zapPort>8080</zapPort>
-                    <targetUrl>http://myapp:8087/rest/demo</targetUrl>
-                    <!-- <targetUrl>http://myapp:8080/rest</targetUrl> -->
+                    <zapPort>8085</zapPort>
+                    <!-- <targetUrl>http://127.0.0.1:8087/rest/demo</targetUrl> -->
+                    <targetUrl>http://myapp:8080/rest</targetUrl>
                     <!-- http://localhost:8082/ -->
                 </configuration>
             </plugin>
